--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -45,6 +45,11 @@
     --sidebar-accent-foreground: var(--accent-foreground)
     --sidebar-border: var(--border)
     --sidebar-ring: var(--ring)
+    --color-1: 0 100% 63%
+    --color-2: 270 100% 63%
+    --color-3: 210 100% 63%
+    --color-4: 195 100% 63%
+    --color-5: 90 100% 63%
 
   .dark
     --background: 240 10% 3.9%
@@ -71,6 +76,11 @@
     --chart-3: 30 80% 55%
     --chart-4: 280 65% 60%
     --chart-5: 340 75% 55%
+    --color-1: 0 100% 63%
+    --color-2: 270 100% 63%
+    --color-3: 210 100% 63%
+    --color-4: 195 100% 63%
+    --color-5: 90 100% 63%
 
 @layer base
   *
