--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -111,7 +111,8 @@
     @apply border-border/30 dark:border-border
 
   .container-wrapper
-    @apply min-[1800px]:max-w-[1536px] min-[1800px]:border-x border-border/30 dark:border-border mx-auto w-full
+    @apply min-[1800px]:max-w-[1536px] mx-auto w-full
+    // @apply min-[1800px]:max-w-[1536px] min-[1800px]:border-x border-border/30 dark:border-border mx-auto w-full
 
   .container
     @apply px-4 xl:px-6 2xl:px-4 mx-auto max-w-[1536px]
@@ -145,3 +146,59 @@
 
   .fade-right-lg
     mask-image: linear-gradient(to left, transparent 15%, black 100%)
+
+  /* Blob animation */
+  .animate-blob
+    animation: blob-bounce 8s infinite ease
+
+  .animation-delay-2000
+    animation-delay: 2s
+
+  .animation-delay-4000
+    animation-delay: 4s
+
+  @keyframes blob-bounce
+    0%
+      transform: translate(0px, 0px) scale(1)
+    33%
+      transform: translate(30px, -30px) scale(1.1)
+    66%
+      transform: translate(-20px, 20px) scale(0.9)
+    100%
+      transform: translate(0px, 0px) scale(1)
+
+  /* Grid pattern background */
+  .bg-grid-pattern
+    background-size: 40px 40px
+    background-image: linear-gradient(to right, rgba(128, 128, 128, 0.1) 1px, transparent 1px), linear-gradient(to bottom, rgba(128, 128, 128, 0.1) 1px, transparent 1px)
+
+  /* Shine effect for buttons */
+  .shine-effect
+    position: relative
+    overflow: hidden
+
+  .shine-effect::after
+    content: ''
+    position: absolute
+    top: -50%
+    left: -50%
+    width: 200%
+    height: 200%
+    background: linear-gradient(45deg, rgba(255, 255, 255, 0) 30%, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0) 70%)
+    transform: rotate(45deg)
+    transition: all 0.5s ease
+    opacity: 0
+
+  .shine-effect:hover::after
+    opacity: 1
+    animation: shine 1.5s ease
+
+  @keyframes shine
+    0%
+      left: -50%
+      opacity: 0
+    10%
+      opacity: 1
+    100%
+      left: 150%
+      opacity: 0
