--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -34,14 +34,14 @@
     --color-3: 210 100% 63%
     --color-4: 195 100% 63%
     --color-5: 90 100% 63%
-    --sidebar-background: var(--background)
-    --sidebar-foreground: var(--foreground)
-    --sidebar-primary: var(--primary)
-    --sidebar-primary-foreground: var(--primary-foreground)
-    --sidebar-accent: var(--accent)
-    --sidebar-accent-foreground: var(--accent-foreground)
-    --sidebar-border: var(--border)
-    --sidebar-ring: var(--ring)
+    --sidebar-background: 0 0% 98%
+    --sidebar-foreground: 240 5.3% 26.1%
+    --sidebar-primary: 240 5.9% 10%
+    --sidebar-primary-foreground: 0 0% 98%
+    --sidebar-accent: 240 4.8% 95.9%
+    --sidebar-accent-foreground: 240 5.9% 10%
+    --sidebar-border: 220 13% 91%
+    --sidebar-ring: 217.2 91.2% 59.8%
 
   .dark
     --background: 224 71.4% 4.1%
@@ -73,14 +73,22 @@
     --color-3: 210 100% 63%
     --color-4: 195 100% 63%
     --color-5: 90 100% 63%
-    --sidebar-background: var(--background)
-    --sidebar-foreground: var(--foreground)
-    --sidebar-primary: var(--primary)
-    --sidebar-primary-foreground: var(--primary-foreground)
-    --sidebar-accent: var(--accent)
-    --sidebar-accent-foreground: var(--accent-foreground)
-    --sidebar-border: var(--border)
-    --sidebar-ring: var(--ring)
+    --sidebar-background: 240 5.9% 10%
+    --sidebar-foreground: 240 4.8% 95.9%
+    --sidebar-primary: 224.3 76.3% 48%
+    --sidebar-primary-foreground: 0 0% 100%
+    --sidebar-accent: 240 3.7% 15.9%
+    --sidebar-accent-foreground: 240 4.8% 95.9%
+    --sidebar-border: 240 3.7% 15.9%
+    --sidebar-ring: 217.2 91.2% 59.8%
+    // --sidebar-background: var(--background)
+    // --sidebar-foreground: var(--foreground)
+    // --sidebar-primary: var(--primary)
+    // --sidebar-primary-foreground: var(--primary-foreground)
+    // --sidebar-accent: var(--accent)
+    // --sidebar-accent-foreground: var(--accent-foreground)
+    // --sidebar-border: var(--border)
+    // --sidebar-ring: var(--ring)
 
 @layer base
   *
