--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -80,6 +80,15 @@
     @apply bg-background text-foreground
 
 @layer utilities
+  .border-grid
+    @apply border-border/30 dark:border-border
+
+  .container-wrapper
+    @apply min-[1800px]:max-w-[1536px] mx-auto w-full
+
+  .container
+    @apply px-4 xl:px-6 2xl:px-4 mx-auto max-w-[1536px]
+
   input::-webkit-outer-spin-button,
   input::-webkit-inner-spin-button
     -webkit-appearance: none
